--- a/dragonfly_nano_mbed_app.json
+++ b/dragonfly_nano_mbed_app.json
@@ -7,7 +7,7 @@
         },
         "apn": {
             "help": "The APN string to use for this SIM/network, set to 0 if none",
-            "value": "\"nxtgenphone\""
+            "value": 0
         },
         "username": {
             "help": "The user name string to use for this APN, set to zero if none",
@@ -33,6 +33,7 @@
   },
     "target_overrides": {
         "*": {
+            "cellular.use-apn-lookup": false,
             "target.features_add": ["LWIP"],
             "mbed-trace.enable": true,
             "lwip.ipv4-enabled": true,
